--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 <div id="wheelContainer">
 <img src="assets/wheel.png" id="wheel">
-    <div class="number" id="number1">🌹</div>
+    <div class="number" id="number1">🍾</div>
     <div class="number" id="number2">👯</div>
     <div class="number" id="number3">🍫</div>
     <div class="number" id="number4">❓</div>
@@ -137,7 +137,7 @@
 <script>
 
     degrees=[2520,2593,2370]
-    num=["Du bekommst Rosen🌹🌹"," Dein nächster Gewinn wird verdoppelt👯","Rätsel: SMIG"]
+    num=["Du hast Vino gewonnen🍾🍾"," Dein nächster Gewinn wird verdoppelt👯","Rätsel: SMIG"]
     i=0
     count=3
     spincount.innerHTML= 'Versuche: ' + count;
@@ -159,7 +159,7 @@
         setTimeout(function () {
             switch(i){
                 case 1: number1.style.transform = 'scale(100)';
-                createRain("🌹",50,4)
+                createRain("🍾",50,4)
                 break;
                 case 2: number2.style.transform = 'scale(100)';
                 createRain("👯",50,4)
